fixed header on mobile devices

--- a/style.css
+++ b/style.css
@@ -47,7 +47,7 @@ a {
 .nav-item {
   font-size: 2rem;
   color: var(--main-white);
-  padding: 0 2.5rem;
+  padding: 2.5rem;
   margin: auto 0;
   height: 100%;
 }
